--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <property name="index" value="./data/meta/about.xml"/>
     <property name="target" value="./html"/>
     <property name="xsl_editions" value="./xslt/editions.xsl"/>
+    <property name="xsl_editions_xml" value="./xslt/editions-xml.xsl"/>
     <property name="xsl_index" value="./xslt/index.xsl"/>
     <property name="xsl_tox" value="./xslt/toc.xsl"/>
     <property name="xsl_search" value="./xslt/search.xsl"/>
@@ -11,6 +12,10 @@
         <fileset dir="${target}" includes="*.html"/>
     </delete>
     <delete dir="${target}/static-search"/>
+    <xslt style="${xsl_editions_xml}"  basedir="${editions}" destdir="${target}" includes="*.xml">
+        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+        <classpath location="${basedir}/saxon/saxon9he.jar"/>
+    </xslt>
     <xslt style="${xsl_editions}"  basedir="${editions}" destdir="${target}" includes="*.xml">
         <factory name="net.sf.saxon.TransformerFactoryImpl"/>
         <classpath location="${basedir}/saxon/saxon9he.jar"/>
