--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,15 +10,10 @@ jobs:
     steps:
     - name: Perform Checkout
       uses: actions/checkout@v2
-    - name: Install Saxon, Ant and Fundament
+    - name: Install Saxon, Ant and Fundament, staticSearch
       run: |
         apt-get update && apt-get install openjdk-11-jre-headless ant -y --no-install-recommend
-        wget https://repo1.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar
         ./script.sh
-    - name: Install Static Search
-      run: |
-        wget https://github.com/projectEndings/staticSearch/archive/refs/tags/v1.3.0.zip && unzip v1.3.0.zip -d tmp
-        mv ./tmp/staticSearch-1.3.0 ./static-search && rm -rf ./tmp
     - name: Install Ant-Contrib
       run: |
         wget https://repo1.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar
@@ -28,9 +23,9 @@ jobs:
         ant
     - name: Build Index
       run: |
-        ant -f ./static-search/build.xml -DssConfigFile=${PWD}/ss_config.xml
+        ./build_index.sh
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ "{{" }}secrets.GITHUB_TOKEN{{ "}}" }}
         publish_dir: ./html
