--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Build Index
       run: |
         ./build_index.sh
+    - name: Build static search filenames
+      run: |
+        ./staticSearch_listDir.sh
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
