--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         ./build_index.sh
     - name: Build static search filenames
       run: |
-        ./staticSearch_listDir.sh
+        ./html/autocomplete-addon/script.sh
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
