update to autocomplete-addon logic #4

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /static-search
 /html/static-search
 /html/js/arche_api_functions
-/html/config.txt
+/html/autocomplete-addon/auden.txt
 
 
 # Byte-compiled / optimized / DLL files
