--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 <project basedir="." name="tei2html">
     <property name="editions" value="./data/editions"/>
     <property name="index" value="./data/meta/about.xml"/>
+    <property name="description" value="./data/meta/description.xml"/>
     <property name="target" value="./html"/>
     <property name="target_xml" value="./html/xml-view"/>
     <property name="xsl_editions" value="./xslt/editions.xsl"/>
@@ -9,6 +10,7 @@
     <property name="xsl_index" value="./xslt/index.xsl"/>
     <property name="xsl_tox" value="./xslt/toc.xsl"/>
     <property name="xsl_search" value="./xslt/search.xsl"/>
+    <property name="xsl_desc" value="./xslt/description.xsl"/>
     <delete>
         <fileset dir="${target}" includes="*.html"/>
     </delete>
@@ -30,6 +32,10 @@
         <classpath location="${basedir}/saxon/saxon9he.jar"/>
     </xslt>
     <xslt in="${index}" out="${target}/search.html" style="${xsl_search}">
+        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+        <classpath location="${basedir}/saxon/saxon9he.jar"/>
+    </xslt>
+    <xslt in="${description}" out="${target}/description.html" style="${xsl_desc}">
         <factory name="net.sf.saxon.TransformerFactoryImpl"/>
         <classpath location="${basedir}/saxon/saxon9he.jar"/>
     </xslt>
