--- a/.github/workflows/timeline.yml
+++ b/.github/workflows/timeline.yml
@@ -16,7 +16,7 @@ jobs:
         wget https://sourceforge.net/projects/saxon/files/Saxon-HE/9.9/SaxonHE9-9-1-7J.zip/download && unzip download -d saxon && rm -rf download
     - name: Build
       run: |
-        ant -f build_timeline.xml
+        ant -f scripts/ant/build_timeline.xml
     - name: Commit files to repo
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
@@ -24,4 +24,4 @@ jobs:
         branch: main
         skip_dirty_check: true    
         skip_fetch: true
-        file_pattern: .
+        file_pattern: ./data/meta/*.xml
