--- a/.github/workflows/timeline.yml
+++ b/.github/workflows/timeline.yml
@@ -21,7 +21,7 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: created auden and musulin timeline xml
-        branch: main
+        branch: dev
         skip_dirty_check: true    
         skip_fetch: true
         file_pattern: ./data/meta/*.xml
